# Robot_make_2d-3d_find_people_robotspider

robot_nhện/: CMakeLists.txt  codecai2.py  comms_node.cpp  comms_node.hpp  decision_node.cpp  ecision_node.hpp  fusion_node.cpp  fusion_node.hpp  package.xml  perception_node.cpp  perception_node.hpp  rescue_robot.launch.py
